2003-05-22  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation by Serbian team
	(Prevod.org).

2003-05-20  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2003-05-19  Ole Laursen  <olau@hardworking.dk>

	* da.po: Updated Danish translation.

2003-05-19  Duarte Loreto <happyguy_pt@hotmail.com>

        * pt.po: Updated Portuguese translation.

2003-05-18  Michal Bukovjan <bukm@centrum.cz>

	* cs.po : Updated Czech translation.

2003-05-17  Abel Cheung  <maddog@linux.org.hk>

	* zh_TW.po: Updated traditional Chinese translation.

2003-05-16  Laurent Dhima  <laurenti@alblinux.net>

	* sq.po: Updated Albanian translation.
	
2003-05-16  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.
	Fixed a typo in Czech translation.

2003-05-15  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2003-05-15  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2003-05-15  Abel Cheung  <maddog@linux.org.hk>

	* zh_TW.po: Updated traditional Chinese translation.

2003-05-14  Pablo Gonzalo del Campo <pablodc@bigfoot.com>

        * es.po: Updated Spanish translation.

2003-05-14  KAMAGASAKO Masatoshi  <emerald@gnome.gr.jp>

	* ja.po: Updated Japanese translation.

2002-05-14  Hasbullah Bin Pit <sebol@ikhlas.com>

        * ms.po: Updated Malay translation.

2003-05-14  Abel Cheung  <maddog@linux.org.hk>

	* cs.po, da.po, de.po, el.po, es.po, fr.po, ga.po, ja.po,
	  ko.po, lv.po, ms.po, nl.po, no.po, pl.po, pt.po, pt_BR.po,
	  vi.po, zh_TW.po: Merged with themus translations.
	* sr.po, sr@Latn.po: New files.

2003-05-13  Andrew Sobala  <aes@gnome.org>

	* POTFILES.in: added themus files

2003-05-13  Christian Rose  <menthos@menthos.com>

	* POTFILES.in: Added missing files.
	* sv.po: Updated Swedish translation.

2003-05-12  Duarte Loreto <happyguy_pt@hotmail.com>

        * pt.po: Updated Portuguese translation.
